<resources>
    <string name="app_name">App</string>


    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="username">아이디</string>
    <string name="password1">비밀번호</string>
    <string name="password2">비밀번호 다시 입력</string>
    <string name="searchbar_hint">검색</string>
    <string name="image">image</string>
</resources>